--- a/week2/lab1_python_basics.ipynb
+++ b/week2/lab1_python_basics.ipynb
@@ -43,7 +43,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/jiangenhe/insc-486-2021-spring/blob/main/lab1_python_basics.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/jiangenhe/insc-486-2021-spring/blob/main/week2/lab1_python_basics.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -229,7 +229,7 @@
       "source": [
         "a = [1, 2, 3]"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -242,7 +242,7 @@
       "source": [
         "b = a"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -287,7 +287,7 @@
         "a = 'foo'\n",
         "type(a)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -386,7 +386,7 @@
       "source": [
         "a = 'foo'"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -403,7 +403,7 @@
       "source": [
         "getattr(a, 'split')"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -949,7 +949,7 @@
         "b = 5\n",
         "b is not None"
       ],
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1113,7 +1113,7 @@
         "if a < b or c > d:\n",
         "    print('Made it')"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1169,7 +1169,7 @@
         "    total += value\n",
         "total"
       ],
-      "execution_count": 40,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1383,7 +1383,7 @@
         "tup = 4, 5, 6\n",
         "tup"
       ],
-      "execution_count": 48,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1508,7 +1508,7 @@
         "a, b, c = tup\n",
         "b"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2154,7 +2154,7 @@
         "seq = [7, 2, 3, 7, 5, 6, 0, 1]\n",
         "seq[1:5]"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2353,7 +2353,7 @@
         "zipped = zip(seq1, seq2)\n",
         "list(zipped)"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2408,7 +2408,7 @@
       "source": [
         "list(reversed(range(10)))"
       ],
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2436,7 +2436,7 @@
       "source": [
         "seq[-6:-2]"
       ],
-      "execution_count": 60,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2466,7 +2466,7 @@
       "source": [
         "seq[::2]"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2496,7 +2496,7 @@
       "source": [
         "seq[::-1]"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2965,6 +2965,29 @@
         "setx = set([\"green\", \"blue\"])\n",
         "sety = set([\"blue\", \"yellow\"])\n",
         "unionset = ([])"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "WZNm5kyFJlxS"
+      },
+      "source": [
+        "## Exercise 5\n",
+        " Find the average hwy mpg for each class of vehicle in mpg.csv dataset.\n",
+        "\n",
+        " "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "_tykwhxXJzOc"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
