--- a/week2/lab1_python_basics.ipynb
+++ b/week2/lab1_python_basics.ipynb
@@ -2970,21 +2970,58 @@
       "outputs": []
     },
     {
-      "cell_type": "markdown",
+      "cell_type": "code",
       "metadata": {
-        "id": "WZNm5kyFJlxS"
+        "id": "_tykwhxXJzOc"
       },
       "source": [
-        "## Exercise 5\n",
-        " Find the average hwy mpg for each class of vehicle in mpg.csv dataset.\n",
-        "\n",
-        " "
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "r4rs-M2MSFbK"
+      },
+      "source": [
+        "## Exercise 5"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "I7IifUqRQKHo"
+      },
+      "source": [
+        "1. Create a list with the average hwy mpg for each class of vehicle in mpg.csv dataset and sort the result from lowest average hwy mpg to highest."
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_tykwhxXJzOc"
+        "id": "xv7bilU7QQb4"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "80A3yVO9QLZE"
+      },
+      "source": [
+        "2. Find the manufacturer that made the most cars with 8 cylinders"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ImMdbwi4SFbL"
       },
       "source": [
         ""
