--- a/week2/lab1_python_basics.ipynb
+++ b/week2/lab1_python_basics.ipynb
@@ -1613,272 +1613,6 @@
       "metadata": {
         "deletable": true,
         "editable": true,
-        "id": "uZASrdZ4vX4I"
-      },
-      "source": [
-        "### dict"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "deletable": true,
-        "editable": true,
-        "id": "5GaycqjJvX4I"
-      },
-      "source": [
-        "empty_dict = {}\n",
-        "d1 = {'a' : 'some value', 'b' : [1, 2, 3, 4]}\n",
-        "d1"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "deletable": true,
-        "editable": true,
-        "id": "UWo76DgjvX4I"
-      },
-      "source": [
-        "d1[7] = 'an integer'\n",
-        "d1\n",
-        "d1['b']"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "deletable": true,
-        "editable": true,
-        "id": "bB6fNFSbvX4I"
-      },
-      "source": [
-        "'b' in d1"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "deletable": true,
-        "editable": true,
-        "id": "OTGHnJjvvX4I"
-      },
-      "source": [
-        "d1[5] = 'some value'\n",
-        "d1\n",
-        "d1['dummy'] = 'another value'\n",
-        "d1\n",
-        "del d1[5]\n",
-        "d1\n",
-        "ret = d1.pop('dummy')\n",
-        "ret\n",
-        "d1"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "deletable": true,
-        "editable": true,
-        "id": "SGv14zmSvX4I"
-      },
-      "source": [
-        "list(d1.keys())\n",
-        "list(d1.values())"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "deletable": true,
-        "editable": true,
-        "id": "IuaJR840vX4I"
-      },
-      "source": [
-        "d1.update({'b' : 'foo', 'c' : 12})\n",
-        "d1"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "deletable": true,
-        "editable": true,
-        "id": "ha8oYxjavX4I"
-      },
-      "source": [
-        "#### Creating dicts from sequences"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "deletable": true,
-        "editable": true,
-        "id": "dbZvfeFYvX4J"
-      },
-      "source": [
-        "mapping = {}\n",
-        "for key, value in zip(key_list, value_list):\n",
-        "    mapping[key] = value"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "deletable": true,
-        "editable": true,
-        "id": "z5CWwcGsvX4J"
-      },
-      "source": [
-        "mapping = dict(zip(range(5), reversed(range(5))))\n",
-        "mapping"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "deletable": true,
-        "editable": true,
-        "id": "kc12kOZOvX4J"
-      },
-      "source": [
-        "#### Default values"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "deletable": true,
-        "editable": true,
-        "id": "g_tFDKG_vX4J"
-      },
-      "source": [
-        "if key in some_dict:\n",
-        "    value = some_dict[key]\n",
-        "else:\n",
-        "    value = default_value"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "deletable": true,
-        "editable": true,
-        "id": "cL-zUJwbvX4J"
-      },
-      "source": [
-        "value = some_dict.get(key, default_value)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "deletable": true,
-        "editable": true,
-        "id": "-ae_c2ycvX4J"
-      },
-      "source": [
-        "words = ['apple', 'bat', 'bar', 'atom', 'book']\n",
-        "by_letter = {}\n",
-        "for word in words:\n",
-        "    letter = word[0]\n",
-        "    if letter not in by_letter:\n",
-        "        by_letter[letter] = [word]\n",
-        "    else:\n",
-        "        by_letter[letter].append(word)\n",
-        "by_letter"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "deletable": true,
-        "editable": true,
-        "id": "mE__2_78vX4J"
-      },
-      "source": [
-        "for word in words:\n",
-        "    letter = word[0]\n",
-        "    by_letter.setdefault(letter, []).append(word)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "deletable": true,
-        "editable": true,
-        "id": "c6L0wj-xvX4K"
-      },
-      "source": [
-        "from collections import defaultdict\n",
-        "by_letter = defaultdict(list)\n",
-        "for word in words:\n",
-        "    by_letter[word[0]].append(word)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "deletable": true,
-        "editable": true,
-        "id": "0wknwsl0vX4K"
-      },
-      "source": [
-        "#### Valid dict key types"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "deletable": true,
-        "editable": true,
-        "id": "Au0B3qzgvX4K"
-      },
-      "source": [
-        "hash('string')\n",
-        "hash((1, 2, (2, 3)))\n",
-        "hash((1, 2, [2, 3])) # fails because lists are mutable"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "deletable": true,
-        "editable": true,
-        "id": "-b4OlWgJvX4K"
-      },
-      "source": [
-        "d = {}\n",
-        "d[tuple([1, 2, 3])] = 5\n",
-        "d"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "deletable": true,
-        "editable": true,
         "id": "S-BnuGu0vX4C"
       },
       "source": [
@@ -2802,10 +2536,8 @@
         "result = [] \n",
         "\n",
         "for val in collection:\n",
-        "\n",
-        "if condition:\n",
-        "\n",
-        "result.append(expr)\n",
+        "  if condition:\n",
+        "    result.append(expr)\n",
         "```"
       ]
     },
@@ -2860,6 +2592,26 @@
       "source": [
         "loc_mapping = {val : index for index, val in enumerate(strings)} \n",
         "loc_mapping"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "AD6LBww9WL7i"
+      },
+      "source": [
+        "### Lambda"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1lycmW_eWSUB"
+      },
+      "source": [
+        "my_function = lambda a, b, c : a + b"
       ],
       "execution_count": null,
       "outputs": []
@@ -2965,66 +2717,6 @@
         "setx = set([\"green\", \"blue\"])\n",
         "sety = set([\"blue\", \"yellow\"])\n",
         "unionset = ([])"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "_tykwhxXJzOc"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "r4rs-M2MSFbK"
-      },
-      "source": [
-        "## Exercise 5"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "I7IifUqRQKHo"
-      },
-      "source": [
-        "1. Create a list with the average hwy mpg for each class of vehicle in mpg.csv dataset and sort the result from lowest average hwy mpg to highest."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "xv7bilU7QQb4"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "80A3yVO9QLZE"
-      },
-      "source": [
-        "2. Find the manufacturer that made the most cars with 8 cylinders"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "ImMdbwi4SFbL"
-      },
-      "source": [
-        ""
       ],
       "execution_count": null,
       "outputs": []
