--- a/week3/week3_lecture_part1_numpy_basics.ipynb
+++ b/week3/week3_lecture_part1_numpy_basics.ipynb
@@ -20,8 +20,16 @@
       "version": "3.5.2"
     },
     "colab": {
-      "name": "week-3-part1-numpy-basics.ipynb",
+      "name": "week3_lecture_part1_numpy_basics.ipynb",
       "provenance": [],
+      "collapsed_sections": [
+        "aurOLOzyg_65",
+        "V1Jt45RBg_66",
+        "m2Z-qnYcg_6-",
+        "LzPJI-yCg_6_",
+        "bx919Uj3g_7E",
+        "FsFOQeMcg_7F"
+      ],
       "toc_visible": true,
       "include_colab_link": true
     }
@@ -36,6 +44,193 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/jiangenhe/insc-486-2021-spring/blob/main/week3/week3_lecture_part1_numpy_basics.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "doiFHt0-5_3_"
+      },
+      "source": [
+        "# Read csv File"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "i-c5tftH77Ka"
+      },
+      "source": [
+        "## import csv"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JI8K56D6zwS9"
+      },
+      "source": [
+        "import csv\n",
+        "\n",
+        "with open('mpg.csv') as csvfile:\n",
+        "  mpg = list(csv.DictReader(csvfile))\n",
+        "\n",
+        "mpg[:3]"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "JjH95WiNZL9T"
+      },
+      "source": [
+        "# How many cars?\n",
+        "\n",
+        "len(mpg)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pJpnO8j4Z1-L"
+      },
+      "source": [
+        "mpg[0].keys()"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "RoPRuqQn9gVR"
+      },
+      "source": [
+        "## Average MPG"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "fPNmDcH1C9hs"
+      },
+      "source": [
+        "sum(float(d['cty']) for d in mpg) / len(mpg)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YFmGmmQXFzsH"
+      },
+      "source": [
+        "## The numbers of cylinders"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "11yTZQ09F5_i",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "cf40e662-bc21-4c9c-ba3f-cf1bbf3cf490"
+      },
+      "source": [
+        "cylinders = set(d['cyl'] for d in mpg)\n",
+        "cylinders"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'4', '5', '6', '8'}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "kju0gKj8F9pJ"
+      },
+      "source": [
+        "## Aggregated data"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wQqnVmyhIPr8"
+      },
+      "source": [
+        "Average city mpg for each number of cylinders"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "XpGL82Z4IMA_"
+      },
+      "source": [
+        "CtyMpgByCyl = []\n",
+        "for c in cylinders:\n",
+        "  summpg = 0 \n",
+        "  cyltypecount = 0\n",
+        "  for d in mpg:\n",
+        "    if d['cyl'] == c:\n",
+        "      summpg += float(d['cty'])\n",
+        "      cyltypecount += 1\n",
+        "  CtyMpgByCyl.append((c, summpg / cyltypecount))\n",
+        "\n",
+        "CtyMpgByCyl"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "k2ZdV9ocIoHS"
+      },
+      "source": [
+        "Average number of cylinders of the cars made by each manufacturer"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bUIyK_GVJkry"
+      },
+      "source": [
+        "HwyMpgByClass = []\n",
+        "\n",
+        "for t in vehicleclass: # iterate over all the vehicle classes\n",
+        "    summpg = 0\n",
+        "    vclasscount = 0\n",
+        "    for d in mpg: # iterate over all dictionaries\n",
+        "        if d['class'] == t: # if the cylinder amount type matches,\n",
+        "            summpg += float(d['hwy']) # add the hwy mpg\n",
+        "            vclasscount += 1 # increment the count\n",
+        "    HwyMpgByClass.append((t, summpg / vclasscount)) # append the tuple ('class', 'avg mpg')\n",
+        "\n",
+        "HwyMpgByClass.sort(key=lambda x: x[1])\n",
+        "HwyMpgByClass"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
