--- a/week2/lab1_python_basics.ipynb
+++ b/week2/lab1_python_basics.ipynb
@@ -2637,13 +2637,35 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "N-YfOJNEHzoa"
+        "id": "N-YfOJNEHzoa",
+        "outputId": "ab9e4c53-40cb-4d38-97c9-08a98f661258",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
-        "items = [1,2,3,4,6]"
+        "items = [1,2,3,4,6]\n",
+        "\n",
+        "s = 0\n",
+        "for item in items:\n",
+        "  s += item\n",
+        "s"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "16"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 1
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2657,26 +2679,44 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Ufb0-pFGH6LN"
+        "id": "Ufb0-pFGH6LN",
+        "outputId": "47672e5c-4284-42e2-a29f-343a2467576d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "colors = ['Red', 'Blue', 'Green', 'Black', 'White']\n",
         "\n",
         "# Getting the first element\n",
-        "\n",
+        "print(colors[0])\n",
         "# Getting the last element\n",
-        "\n",
+        "print(colors[-1])\n",
         "# Adding an \"Orange\" to the end of the list\n",
-        "\n",
+        "colors.append('Orange')\n",
         "# Getting the first three items\n",
-        "\n",
+        "colors[:3]\n",
         "# Using a loop to convert a list of names to upper case\n",
-        "\n",
+        "for i, color in enumerate(colors):\n",
+        "  colors[i] = color.upper()\n",
+        "print(colors) \n",
         "# Using a comprehension to convert a list of names to upper case\n",
-        "\n"
+        "colors=[color.upper() for color in colors]\n",
+        "print(colors)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Red\n",
+            "White\n",
+            "['RED', 'BLUE', 'GREEN', 'BLACK', 'WHITE', 'ORANGE']\n",
+            "['RED', 'BLUE', 'GREEN', 'BLACK', 'WHITE', 'ORANGE']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2690,14 +2730,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "WKAVqFb_JyPj"
+        "id": "WKAVqFb_JyPj",
+        "outputId": "45127202-09ed-459e-939d-ae87fca549a2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "dic1={1:10, 2:20}\n",
-        "dic2={3:30, 4:40}"
+        "dic2={3:30, 4:40}\n",
+        "\n",
+        "dic1.update(dic2)\n",
+        "dic1"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{1: 10, 2: 20, 3: 30, 4: 40}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -2711,12 +2771,41 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "JNYm1jU-KaJf"
+        "id": "JNYm1jU-KaJf",
+        "outputId": "ddea26be-85af-4e57-da6f-34e597f09ceb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "setx = set([\"green\", \"blue\"])\n",
         "sety = set([\"blue\", \"yellow\"])\n",
-        "unionset = ([])"
+        "unionset = setx|sety\n",
+        "unionset"
+      ],
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'blue', 'green', 'yellow'}"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 6
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "66pQgEOahchQ"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
