--- a/week3/lab2_read_csv_numpy.ipynb
+++ b/week3/lab2_read_csv_numpy.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "lab2_read_csv_numpy.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNfAqcVppuI+wZAseqkys7L",
+      "authorship_tag": "ABX9TyOqtX2PHzgew46M3kXLdKP2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -145,7 +145,7 @@
         "\n",
         "  After splitting:\n",
         "\n",
-        "  [array([1, 2]), array([3, 4, 5, 6]), array([ 7, 8, 9, 10, 11, 12, 13, 14])]"
+        "  [array([1, 2, 3, 4, 5, 6]), array([ 7, 8, 9, 10, 11, 12, 13, 14])]"
       ]
     },
     {
@@ -196,7 +196,7 @@
       "source": [
         "a = np.array([[7, 8, 9], [10, 11, 12], [22,32,1]])"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     }
   ]
