--- a/week5/lab_4.ipynb
+++ b/week5/lab_4.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "lab-5.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOkhw9oEje9YjXaezcpwlvO",
+      "authorship_tag": "ABX9TyOY3MaL9fSxoYbrX93Ral5u",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,7 +65,7 @@
         "id": "J11U8e_P7KOs"
       },
       "source": [
-        "Write a Pandas program to extract date (format: mm-dd-yyyy) from a given column of a given DataFrame."
+        "(**Optional**, you may need to use apply method to complete this quesiton) Write a Pandas program to extract date (format: mm-dd-yyyy) from a given column of a given DataFrame. "
       ]
     },
     {
