--- a/week6/Lab5.ipynb
+++ b/week6/Lab5.ipynb
@@ -6,7 +6,7 @@
       "name": "Lab5.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOGGAARdG2Krg1THmGVmAMr",
+      "authorship_tag": "ABX9TyM1CHRsjEldozQ/nE1gqDuE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
         "        'name': ['Scarlette Fisher', 'Carla Williamson', 'Dante Morse', 'Kaiser William', 'Madeeha Preston'], \n",
         "        'marks': [201, 200, 198, 219, 201]})\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -170,7 +170,7 @@
       "source": [
         "df = pd.DataFrame({\n",
         "    'school_code': ['s001','s002','s003','s001','s002','s004'],\n",
-        "    'street': ['st01','st01','st01','st02','st02','st02']\n",
+        "    'street': ['st01','st01','st01','st02','st02','st02'],\n",
         "    'class': ['V', 'V', 'VI', 'VI', 'V', 'VI'],\n",
         "    'name': ['Alberto Franco','Gino Mcneill','Ryan Parkes', 'Eesha Hinton', 'Gino Mcneill', 'David Parkes'],\n",
         "    'date_of_birth': ['15/05/2002','17/05/2002','16/02/1999','25/09/1998','11/05/2002','15/09/1997'],\n",
