--- a/week6/Lab_6_data_aggregation.ipynb
+++ b/week6/Lab_6_data_aggregation.ipynb
@@ -6,7 +6,7 @@
       "name": "Lab-6-data-aggregation.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyOc4TtvYJtgAG1nUaHDTAXh",
+      "authorship_tag": "ABX9TyPjy+2GmCo/VGatHkUklegE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
         "stadiums = pd.read_csv(\"https://raw.githubusercontent.com/jiangenhe/insc-486-2021-spring/main/week6/stadiums.csv\")\n",
         "stadiums.head()"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -214,7 +214,7 @@
         "id": "I9W-vf-CGmw3"
       },
       "source": [
-        "3. Group stadiums in USA by decades (like 1900, 1910, 1920,...) and get the numbers of stadiums built for each deacdes."
+        "3. Group stadiums in USA by decades (like 1900, 1910, 1920,...) and get the numbers of stadiums built for each deacde."
       ]
     },
     {
