--- a/assignment3/Assignment_3_Part_1_Final_Project_Proposal.ipynb
+++ b/assignment3/Assignment_3_Part_1_Final_Project_Proposal.ipynb
@@ -6,7 +6,7 @@
       "name": "Assignment 3 - Part 1 - Final Project Proposal.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNSdRwXazh8+AQHEch+NLm3",
+      "authorship_tag": "ABX9TyM4AT9+xrSSIkQBHyweaZMo",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -81,7 +81,9 @@
         "* [Data is Plural](https://tinyletter.com/data-is-plural/letters/data-is-plural-2021-03-03-edition)\n",
         "* [UCI Machine Learning Repository](https://archive.ics.uci.edu/ml/index.php)\n",
         "\n",
-        "The dataset should be complex and challenging enough to an interesting final project."
+        "The dataset should be complex and challenging enough to an interesting final project.\n",
+        "\n",
+        "To ensure everyone has different project dataset, please **list your dataset on this Canvas page** : https://utk.instructure.com/courses/121274/pages/dataset-selection?module_item_id=1821250"
       ]
     },
     {
