--- a/assignment3/Assignment_3_Part_1_Final_Project_Proposal.ipynb
+++ b/assignment3/Assignment_3_Part_1_Final_Project_Proposal.ipynb
@@ -6,7 +6,7 @@
       "name": "Assignment 3 - Part 1 - Final Project Proposal.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyM4AT9+xrSSIkQBHyweaZMo",
+      "authorship_tag": "ABX9TyPAnyei4jlZz1UEkW6hVyZ5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -64,7 +64,7 @@
       "source": [
         "## 2. Overview\n",
         "\n",
-        "A few sentences that describe the problem your analysis will tackl, the background of the problem, and your motivation."
+        "A few sentences that describe the problem your analysis will tackle, the background of the problem, and your motivation."
       ]
     },
     {
