--- a/week8/lab7_nba.ipynb
+++ b/week8/lab7_nba.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "lab7-nba.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNDdCkScUgF8LsMSIH7QsFu",
+      "authorship_tag": "ABX9TyNzUf1cV1JoPrpPgyUBLdU1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -65,17 +65,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "4J95yVUa5zog"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "MYxcdjzw0guF"
@@ -83,7 +72,9 @@
       "source": [
         "## 1. Exploratory data analysis.\n",
         "\n",
-        "### 1.1 Calculate mean, median, min, and max of all the variable."
+        "### 1.1 Calculate mean, median, min, and max of all the variable. \n",
+        "\n",
+        "use describe()"
       ]
     },
     {
@@ -144,7 +135,7 @@
         "id": "hsNJQVef1Qfp"
       },
       "source": [
-        "## 3. Statistic test"
+        "## 3. Correlation analysis and test"
       ]
     },
     {
