--- a/week9/lab8_nba_2.ipynb
+++ b/week9/lab8_nba_2.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "lab8-nba-2.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyM87R0bif13X7qR8yFxeX02",
+      "authorship_tag": "ABX9TyNAEQki2w5pBNGMRz5B/2kR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,7 +30,7 @@
         "id": "JBQAdOwvy7jx"
       },
       "source": [
-        "# Lab 7: Correlation Analysis"
+        "# Lab 8: Confidence Intervals"
       ]
     },
     {
@@ -108,7 +108,7 @@
         "id": "NdMsTKjM026B"
       },
       "source": [
-        "# 3. Compare the mean of Free Throw Percentage (FT%) between team ATL and team BOS (TM) and calculate the confidence interval for the mean difference.\n",
+        "## 3. Compare the mean of Free Throw Percentage (FT%) between team ATL and team BOS (TM) and calculate the confidence interval for the mean difference.\n",
         "\n",
         " Example: https://pandas.pydata.org/pandas-docs/stable/reference/api/pandas.DataFrame.plot.scatter.html"
       ]
