--- a/week10/lab_9_Significance_Test.ipynb
+++ b/week10/lab_9_Significance_Test.ipynb
@@ -6,7 +6,7 @@
       "name": "lab-9: Significance Test.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyPaElru8Y+WqhrnK+i4yfkj",
+      "authorship_tag": "ABX9TyNGzwZeKAW/5zYJGdYaGgD/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -110,7 +110,7 @@
         "id": "aXkoqjRnoC7u"
       },
       "source": [
-        "## Step 2.2: Check nomality by histgram graph"
+        "## Step 2.2: Check nomality by histogram graph"
       ]
     },
     {
