--- a/week10/lab_9_Significance_Test.ipynb
+++ b/week10/lab_9_Significance_Test.ipynb
@@ -6,7 +6,7 @@
       "name": "lab-9: Significance Test.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyNGzwZeKAW/5zYJGdYaGgD/",
+      "authorship_tag": "ABX9TyNKM8RamLcmc9n4DgqwirRe",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -58,8 +58,8 @@
         "**Population**: Adults in the NHANES data.  \n",
         "**Parameter of Interest**: $\\mu_1 - \\mu_2$, Body Mass Index.  \n",
         "\n",
-        "* Female: ['RIAGENDER'] == 2\n",
-        "* Male: ['RIAGENER'] == 1\n",
+        "* Female: ['RIAGENDR'] == 2\n",
+        "* Male: ['RIAGENDR'] == 1\n",
         "* Body Mass Index: 'BMXBMI'\n",
         "\n"
       ]
