--- a/week10/INSC486_Lab_10.ipynb
+++ b/week10/INSC486_Lab_10.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "INSC486-Lab-10.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPEW5ZX8ZTndfiSg7GLcZKE",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyNpSYmmOtolq7ZDrB0rUMbw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,7 +58,7 @@
         "import statsmodels.api as sm\n",
         "import numpy as np\n",
         "\n",
-        "url = \"https://raw.githubusercontent.com/kshedden/statswpy/master/NHANES/merged/nhanes_2015_2016.csv\"\n",
+        "url = \"https://raw.githubusercontent.com/jiangenhe/insc-486-2021-spring/main/week10/NHANES.csv\"\n",
         "da = pd.read_csv(url)\n",
         "\n",
         "# Drop unused columns, drop rows with any missing values.\n",
@@ -93,7 +94,7 @@
         "id": "7FNDIRVyjgj_"
       },
       "source": [
-        "## 2. Use logistic regression to relate drinking to age, gender (RIAGENDR), and education (DMDEDUC2)."
+        "## 2. Use logistic regression to relate drinking (the binary variable your created in Q1) to age (RIDAGEYR), gender (RIAGENDR), and education (DMDEDUC2)."
       ]
     },
     {
@@ -131,7 +132,7 @@
         "id": "y-8BF3_tkBVV"
       },
       "source": [
-        "## 4. Create a visualization of the fitted model for the relationship between drinking and age."
+        "## 4. Create a visualization of the fitted model for the relationship between drinking and age among females whose education is 4. "
       ]
     },
     {
