--- a/assignment5/Assignment_5_part_2.ipynb
+++ b/assignment5/Assignment_5_part_2.ipynb
@@ -38,7 +38,7 @@
         "- Due: March 29, Monday, 11:59 pm\n",
         "- Submit your Colab link or ipynb file through Canvas\n",
         "- This assignment is worth 75 points that accounts for 7.5% of your final grade.\n",
-        "- **Code efficiency will be considered in grading.**\n",
+        "- **Code quality will be considered in grading.**\n",
         "\n",
         "Learning Objectives:\n",
         "- Linear regression (Statistical analysis)\n",
