--- a/week13/Lab_11_Classification_Playspace.ipynb
+++ b/week13/Lab_11_Classification_Playspace.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Lab 11: Classification Playspace.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOQ3u9+Ig264S5uz6jqvc1N",
+      "authorship_tag": "ABX9TyNqRIg5besqlWeotPYVrugw",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -33,9 +33,9 @@
         "id": "TuKithfAwANL"
       },
       "source": [
-        "# Lab 11: Classification Playspace\n",
+        "# Assignment 6 Part 1: Classification Playspace\n",
         "\n",
-        "This lab is worth 25 points and accounts for 2.5% of your final grade."
+        "This lab is worth 50 points and accounts for 5% of your final grade."
       ]
     },
     {
