--- a/assignment6/Assignment_6_Part_2_Evaluation.ipynb
+++ b/assignment6/Assignment_6_Part_2_Evaluation.ipynb
@@ -53,7 +53,7 @@
         "\n",
         "This is the second part of Assignment 6. It is worth 50 points and accounts for 5% of your final grade.\n",
         "\n",
-        "In this assignment you will train several models and evaluate how effectively they predict instances of fraud using data based on [this dataset from Kaggle](https://www.kaggle.com/dalpozz/creditcardfraud).\n",
+        "In this assignment you will train several models and evaluate how effectively they predict instances of fraud using data based on [this dataset from Kaggle](https://www.kaggle.com/mlg-ulb/creditcardfraud). \n",
         " \n",
         "Each row in `fraud_data.csv` corresponds to a credit card transaction. Features include confidential variables `V1` through `V28` as well as `Amount` which is the amount of the transaction. \n",
         " \n",
@@ -70,7 +70,7 @@
         "import numpy as np\n",
         "import pandas as pd"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -95,12 +95,13 @@
         "# Use X_train, X_test, y_train, y_test for all of the following questions\n",
         "from sklearn.model_selection import train_test_split\n",
         "\n",
-        "df = pd.read_csv('readonly/fraud_data.csv')\n",
+        "df = pd.read_csv('https://raw.githubusercontent.com/jiangenhe/insc-486-2021-spring/main/assignment6/fraud_data.csv')\n",
         "\n",
         "X = df.iloc[:,:-1]\n",
         "y = df.iloc[:,-1]\n",
         "\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=0)"
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=0)\n",
+        "df.head()"
       ],
       "execution_count": null,
       "outputs": []
